--- a/CSACregister.html
+++ b/CSACregister.html
@@ -92,7 +92,7 @@
                 <caption>注册信息</caption>
                 <tbody>
                     <tr >
-                        <td >注册费用：</td><td>1500元/人，参会老师和相关人员交通和食宿自理。</td>
+                        <td >注册费用：</td><td>2000元/人，报名参会老师和相关人员交通和食宿自理。</td>
                     </tr>
                     
 
@@ -102,14 +102,14 @@
                     </tr>
                     <tr>
                         <td>户&nbsp; &nbsp;&nbsp;&nbsp;名：</td>
-                        <td>广西臻悦文化传媒有限公司</td>
+                        <td>杭州畅游会展服务有限公司</td>
                     </tr>
                     <tr>
-                        <td>税 &nbsp; &nbsp;&nbsp;&nbsp;号：</td>
-                        <td>6600 1109 9298 4000 10</td>
+                        <td>账&nbsp; &nbsp;&nbsp;&nbsp;号：</td>
+                        <td>2010 0015 9260 415</td>
                     </tr>
                     <tr>
-                        <td>开户银行：</td><td>桂林银行股份有限公司民主路支行</td>
+                        <td>开户银行：</td><td>杭州联合银行祥符支行</td>
                     </tr>
 <!--                     <tr>
                         <td>账 &nbsp; &nbsp;&nbsp;&nbsp; 号：</td>
