--- a/CSACregister.html
+++ b/CSACregister.html
@@ -126,7 +126,7 @@
                 <table class="table">
                 <caption>住宿信息</caption>
                 <tbody >
-                    <tr><td style="width: 50%;text-indent: 2em">论坛住宿酒店：桂林百悦大酒店（桂林市金鸡岭路 1 号）
+                    <tr><td style="width: 50%;text-indent: 2em">论坛住宿酒店：安排住宿地点：杭州中赢铂金皇冠假日酒店（杭州市滨江区春晓路61号）. 房间类型：大床房（500元/间），标准间（500元/间）。杭州明豪国际酒店（杭州滨江区江南大道558号）。实际收费标准按照酒店当日定价标准。会务组会为您预订酒店房间。
                     </td>
                     </tr>
                 </tbody>
