--- a/CSACplan.html
+++ b/CSACplan.html
@@ -127,7 +127,7 @@
  <tr><td>14:00 - 14:50</td><td>深度学习与图像信息隐藏--一点认识</td><td>黄继武</td><td>待定</td></tr>
  <tr><td>14:50 - 15:40</td><td>人工智能驱动的网络空间内容安全</td><td>操晓春</td><td>待定</td></tr>
  <tr><td>15:40 - 16:00</td><td colspan="3">茶歇</td></tr>
- <tr><td>16:00 - 16:50</td><td>A brief survey on secure multiparty computation</td><td>邢朝平</td><td>待定</td></tr>
+ <tr><td>16:00 - 16:50</td><td>Hacker Psychology(杨义先教授专著)</td><td>彭海朋</td><td>待定</td></tr>
 <tr><td>16:50 - 17:10</td><td>大数据安全与隐私保护</td><td>李彦宾</td><td>待定</td></tr>
 <tr><td>17:10 - 17:30</td><td>密码学的行业应用</td><td>程亮</td><td>待定</td></tr>
  <tr><td colspan="4">晚餐</td></tr>
@@ -136,7 +136,7 @@
  <tr><td>&nbsp;9:20 - 10:10</td><td>Quantum Secure Direct Communication: Sending Secrets Without Encryption </td><td>龙桂鲁</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
  <tr><td>10:30 - 11:20</td><td>后量子密码：面向新一代公钥密码算法标准</td><td>张锐</td><td>待定</td></tr>
- <tr><td>11:20 - 12:10</td><td>Hacker Psychology(杨义先教授专著)</td><td>彭海鹏</td><td>待定</td></tr>
+ <tr><td>11:20 - 12:10</td><td>A brief survey on secure multiparty computation</td><td>邢朝平</td><td>待定</td></tr>
  <tr><td colspan="4">午餐</td></tr>
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
