--- a/CSACplan.html
+++ b/CSACplan.html
@@ -141,25 +141,25 @@
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
 	    </br></br>
-<!--    <div id="up2">
-            <a href="SHDIpage.html">
+   <div id="up2">
+            <a href="CSACpage.html">
                 <i class="fa fa-angle-double-up  fa-3x" style="color:rgb(81,125,207)" aria-hidden="true"></i>
             </a>
     </div> 
 
 		<div class="main2">
                  	<div id="buttons">
-                   	 <a id="up1" href="SHDIpage.html" >
+                   	 <a id="up1" href="CSACpage.html" >
                        		 <i class="fa fa-angle-double-up fa-3x" style="color:rgb(81,125,207)"aria-hidden="true"></i>
                     	</a>
-                   	 <a  id="down2" href="SHDIregister.html">
+                   	 <a  id="down2" href="CSACregister.html">
                         	<i class="fa fa-angle-double-down fa-3x"style="color:rgb(81,125,207)"aria-hidden="true"></i>
                     	</a>
                 	</div>
-		</div>		-->
+		</div>		
 
 
-    <!-- <script>
+    <script>
 //         let iconDown=document.getElementById('up2');
             
 //             //跨浏览器兼容事件处理器
@@ -208,7 +208,7 @@
         
         addHandler(down2,"mouseout",()=>down2.style.border="");
         window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
-    </script> -->
+    </script> 
 
 </body>
 </html>
