--- a/CSACregister.html
+++ b/CSACregister.html
@@ -134,7 +134,7 @@
 
                 <table class="table table3">
                     <caption>
-                            论坛合作联系方式
+                            会议合作联系方式: linzjiang#hotmail&nbspdot&nbspcom
                     </caption>
                     <tbody >
                         <tr>
@@ -193,7 +193,7 @@
                 </p>-->
         </div>
    <div id="up2">
-            <a href="SHDIplan.html">
+            <a href="CSACplan.html">
                 <i class="fa fa-angle-double-up  fa-3x" style="color:rgb(81,125,207)" aria-hidden="true"></i>
             </a>
     </div>
