--- a/CSACpage.html
+++ b/CSACpage.html
@@ -125,7 +125,7 @@
 <p align="left">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
 <p align="left">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
 <p align="left">会议协办单位：杭州安恒信息技术股份有限公司、公交云和e签宝。<br/></p>
-                        <p class="organization">论坛地点<br/></p>
+                        <p class="organization">报告地点<br/></p>
                         北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）<br/><br/>
                         <a href="https://map.baidu.com/poi/%E5%8C%97%E8%88%AA%E6%9D%AD%E5%B7%9E%E5%88%9B%E6%96%B0%E7%A0%94%E7%A9%B6%E9%99%A2/@13382322.034768684,3508669.909466192,14.04z?uid=9b7b721e5fe770fc8a36eef9&primaryUid=14371455981175128251&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl">
                             <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i>
