--- a/CSACplan.html
+++ b/CSACplan.html
@@ -118,13 +118,13 @@
  <tr><td colspan="4">09月21日&nbsp;(会议地点：北京航空航天大学 杭州研究院 报告厅)</td></tr>
  <tr class="tableizer-firstrow"><th>时间</th><th>日程安排</th><th>嘉宾</th><th>主持人</th></tr>
  <tr><td>&nbsp;08:00 - 08:30</td><td colspan="3">开幕 合影</td></tr>
- <tr><td>&nbsp;08:30 - 09:20</td><td>N/A</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;08:30 - 09:20</td><td>深度学习与图像信息隐藏--一点认识</td><td>黄继武</td><td>待定</td></tr>
  <tr><td>&nbsp;09:20 - 10:10</td><td>轻量级密码算法及其应用</td><td>陈恭亮</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
  <tr><td>10:30 - 11:20</td><td>A Proof-of-Luck Security Model for Blockchain Layer 1</td><td>毛文波</td><td>待定</td></tr>
 <tr><td>11:20 - 11:40</td><td>移动应用数据保护的一种实践</td><td>李卫明</td><td>待定</td></tr>
  <tr><td colspan="4">午餐</td></tr>
- <tr><td>14:00 - 14:50</td><td>深度学习与图像信息隐藏--一点认识</td><td>黄继武</td><td>待定</td></tr>
+ <tr><td>14:00 - 14:50</td><td>以科学的网络安全观做好网络空间学科建设与人才培养（暂定）</td><td>沈昌祥</td><td>待定</td></tr>
  <tr><td>14:50 - 15:40</td><td>人工智能驱动的网络空间内容安全</td><td>操晓春</td><td>待定</td></tr>
  <tr><td>15:40 - 16:00</td><td colspan="3">茶歇</td></tr>
  <tr><td>16:00 - 16:50</td><td>Hacker Psychology(杨义先教授专著)</td><td>彭海朋</td><td>待定</td></tr>
