--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                                 <p style="width: 80%;float: right">GU2 7XH, Guildford, Surrey, UK<br/></p>
                             </td>
                             <td valign="top" style="line-height: 20px">
-                                <p style="width: 80%;float: right">UK: +44(0)7422 581269<br/></p>
-                                <p style="width: 80%;float: right">CH: +86-18180453935<br/></p>
+                                <!-- <p style="width: 80%;float: right">UK: +44(0)7422 581269<br/></p> -->
+                                <!-- <p style="width: 80%;float: right">CH: +86-18180453935<br/></p> -->
                                 <p style="width: 80%;float: right">E-mail:<br/></p>
-                                <p style="width: 80%;float: right;text-indent:2em">linzjiang@hotmail.com<br/></p>
-                                <p style="width: 80%;float: right;text-indent:2em">linzhi.jiang@surrey.ac.uk<br/></p>
+                                <p style="width: 80%;float: right;text-indent:2em">linzjiang#hotmail.com<br/></p>
+                                <p style="width: 80%;float: right;text-indent:2em">linzhi.jiang#surrey.ac.uk<br/></p>
                                 <p style="width: 80%;float: right">WWW:<br/></p>
                                 <p style="width: 80%;float: right;text-indent:2em">https://ruizhian.github.io/TeamWeb/<br/></p>
                             </td>
@@ -200,7 +200,7 @@
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[1]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: auto;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Privacy Protection Research of Big Data Based on Homomorphic Encryption”, State
-                                                key Laboratory of Public Big Data, CNY (Chinese Yuan) 50,000, Dec. 2019 to Dec.
+                                                key Laboratory of Public Big Data, <!--CNY (Chinese Yuan) 50,000, --> Dec. 2019 to Dec.
                                                 2021</p></td>
                                     </tr>
                                     <tr cellpadding="10">
@@ -208,15 +208,15 @@
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[2]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Research on Image Recognition and Its Application over Encrypted Data”, National
-                                                Natural Science Foundation of China (NSFC, Grant No.: 61962013), CNY (Chinese
-                                                Yuan) 400,000, Jun. 2020 to Dec. 2023</p></td>
+                                                Natural Science Foundation of China (NSFC, Grant No.: 61962013), <!--CNY (Chinese
+                                                Yuan) 400,000, --> Jun. 2020 to Dec. 2023</p></td>
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[3]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
-                                            <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Post Quantum Implementation with Hardware”, DAP, CNY (Chinese Yuan) 1800,000,
-                                                Feb. 2020 to Feb. 2023</p></td>
+                                           <!-- <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Post Quantum Implementation with Hardware”, DAP, CNY (Chinese Yuan) 1800,000,
+                                                Feb. 2020 to Feb. 2023</p></td>  -->
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
@@ -231,14 +231,14 @@
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[5]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Homomorphically Data Processing and Application”, Guangxi Key Laboratory of
-                                                Cryptography and Information Security (Grant No.: GCIS201703), CNY (Chinese
-                                                Yuan) 50,000, Dec. 2017 to Dec. 2020</p></td>
+                                                Cryptography and Information Security (Grant No.: GCIS201703), <!-- CNY (Chinese
+                                                Yuan) 50,000,--> Dec. 2017 to Dec. 2020</p></td>
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[6]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
-                                            <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Research on Privacy-preserving Cloud Computing with Encrypted Data ”, the Opening Project of Guang Dong Province Key Laboratory of Information Security Technology (Grant No.: 2017B030314131-12), CNY (Chinese Yuan) 20,000, Jun. 2019 to Dec.
+                                            <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Research on Privacy-preserving Cloud Computing with Encrypted Data ”, the Opening Project of Guang Dong Province Key Laboratory of Information Security Technology (Grant No.: 2017B030314131-12), <!-- CNY (Chinese Yuan) 20,000,--> Jun. 2019 to Dec.
                                                 2019</p></td>
                                     </tr>
                                     <tr cellpadding="10">
@@ -246,44 +246,44 @@
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[7]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">PI, “Research on Fully Homomorphic Encryption Algorithm”, Graduate Innovation Project
-                                                of Guilin University of Electronic Science and Technology (Grant No.: XJYC2012020)
-                                                CNY (Chinese Yuan) 3,000, Jun. 2011 to Dec. 2012</p></td>
+                                                of Guilin University of Electronic Science and Technology (Grant No.: XJYC2012020)，
+                                                <!--  CNY (Chinese Yuan) 3,000,--> Jun. 2011 to Dec. 2012</p></td>
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[8]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">PI, “ Research on Cloud Computing Model Based on Full Homomorphic Encryption”,
-                                                Lu’an Commission Directed City-Level Research (Grant No.: 2012LW022) CNY (Chinese Yuan) 20,000, Jun. 2012 to Dec. 2013</p></td>
+                                                Lu’an Commission Directed City-Level Research (Grant No.: 2012LW022)，<!--  CNY (Chinese Yuan) 20,000,--> Jun. 2012 to Dec. 2013</p></td>
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[9]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">PI, “ Research on Wireless Network Design and Security Protection”, Lu’an Commission
-                                                Directed City-Level Research (Grant No.: 2010LWA004) CNY (Chinese Yuan) 50,000,
+                                                Directed City-Level Research (Grant No.: 2010LWA004)，<!-- CNY (Chinese Yuan) 50,000,-->
                                                 Jun. 2010 to Dec. 2012</p></td>
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[10]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
-                                            <p style="padding-top: 5px;padding-bottom: 5px;">Researcher, “Research on the Method of Security Audit in Cloud Storage”, National Natural Science Foundation of China (NSFC, Grant No.: 61370203), CNY (Chinese Yuan)
-                                                600,000, Jun. 2014 to Dec. 2017</p></td>
+                                            <p style="padding-top: 5px;padding-bottom: 5px;">Researcher, “Research on the Method of Security Audit in Cloud Storage”, National Natural Science Foundation of China (NSFC, Grant No.: 61370203), <!-- CNY (Chinese Yuan)
+                                                600,000,--> Jun. 2014 to Dec. 2017</p></td>
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[11]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">Researcher, “Research on New Data Protection Cryptography Algorithm”, National Key
-                                                Research and Development Project (NKD, Grant No.: 2017YFB0802000), CNY (Chinese Yuan) 1500,000, Jun. 2018 to Dec. 2020</p></td>
+                                                Research and Development Project (NKD, Grant No.: 2017YFB0802000), <!-- CNY (Chinese Yuan) 1500,000,--> Jun. 2018 to Dec. 2020</p></td>
                                     </tr>
                                     <tr cellpadding="10">
                                         <td style="width: 13%;text-align: right;font-size: 15px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[12]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">Researcher, “Homomorphic Encryption Algorithm and Its Application in Cloud Computing ”, Open Project of ISN National Key Laboratory (NKD, Grant No.: ISN13-07),
-                                                CNY (Chinese Yuan) 50,000, Oct. 2011 to Dec. 2013</p></td>
+                                                <!-- CNY (Chinese Yuan) 50,000,--> Oct. 2011 to Dec. 2013</p></td>
                                     </tr>
                                 </table>
                             </td>
