--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 25px">Dr. Linzhi Jiang, University of Surrey, SCCS, Guildfor, UK</p>
+                    <p style="text-align: center;font-size: 25px">Dr. Linzhi Jiang, University of Surrey, SCCS, Guildford, UK</p>
                     <hr>
                     <table>
                         <tr>
