--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <td id="table1">
                                 <p style="float: left"><b>Associate Professor</b>, Guilin University of Electronic Technology<br/></p>
                                 <p style="text-indent:2em;width: 91%;float: right;text-align: right">Dec. 2017 to present</p>
-                                <p style="float: left"><b>Research Fellow</b>, University of Surrey, Project Manager and Supervisor: Pro. Liqun Chen
+                                <p style="float: left"><b>Research Fellow</b>, University of Surrey, Project Manager and Supervisor: Prof. Liqun Chen
                                     <br/></p>
                                 <p style="text-indent:2em;width: 91%;float: right;text-align: right">Sep. 2018 to present</p>
                             </td>
