--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                                 <p style="font-size:15px;width: 90%;float: right"><b>Research Fellow</b>(Sep. 2018 to present)<br/>
                                     • Research: Post-Quantum DAA Schemes Design and Implementation<br/>
                                     • Management: Project Management<br/></p>
-                                <p style="width: 96%;float: right"><b>Intel chengdu Co. LTD</b>, Chengdu, China.<br/></p>
+                                <p style="width: 96%;float: right"><b>Intel Chengdu Co. LTD</b>, Chengdu, China.<br/></p>
                                 <p style="font-size:15px;width: 90%;float: right"><b>Internship </b>(Mar. 2016 to Jun. 2016)<br/>
                                     • Machine Learning and Deep Learning Algorithms Design and Implementation<br/></p>
                                 <p style="width: 96%;float: right"><b>West Anhui University</b>, Lu’an, China.<br/></p>
