--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                                 <!-- <p style="width: 80%;float: right">UK: +44(0)7422 581269<br/></p> -->
                                 <!-- <p style="width: 80%;float: right">CH: +86-18180453935<br/></p> -->
                                 <p style="width: 80%;float: right">E-mail:<br/></p>
-                                <p style="width: 80%;float: right;text-indent:2em">linzjiang#hotmail.com<br/></p>
-                                <p style="width: 80%;float: right;text-indent:2em">linzhi.jiang#surrey.ac.uk<br/></p>
+                                <p style="width: 80%;float: right">linzjiang#hotmail.com<br/></p>
+                                <p style="width: 80%;float: right">linzhi.jiang#surrey.ac.uk<br/></p>
                                 <p style="width: 80%;float: right">WWW:<br/></p>
-                                <p style="width: 80%;float: right;text-indent:2em">https://ruizhian.github.io/TeamWeb/<br/></p>
+                                <p style="width: 80%;float: right">https://ruizhian.github.io/TeamWeb/<br/></p>
                             </td>
                         </tr>
                     </table>
