--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" media="screen" >
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <title>Digital Future Research Center-数字未来研究院</title>
+    <title>Digital Future Research Center</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -39,46 +39,46 @@
                                 <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-                                    <a href="SHDIpage.html">SHDI论坛</a>
+                                    <a href="SHDIpage.html">SHDI Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="SHDIpage.html">论坛介绍</a></li>
-                                        <li><a href="SHDIplan.html">论坛日程</a></li>
-                                        <li><a href="SHDIregister.html">论坛注册</a></li>
+                                        <li><a href="SHDIpage.html">Synposium Introduction</a></li>
+                                        <li><a href="SHDIplan.html">Synposium Schedule</a></li>
+                                        <li><a href="SHDIregister.html">Synposium Register</a></li>
                                     </ul>
                                 </li>
 
                                 <li class="submenu">
-                                    <a href="introduction.html">SMPC论坛</a>
+                                    <a href="introduction.html">SMPC Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="introduction.html">论坛介绍</a></li>
-                                        <li><a href="schedule.html">论坛日程</a></li>
-                                        <li><a href="about.html">论坛注册</a></li>
+                                        <li><a href="introduction.html">Synposium Introduction</a></li>
+                                        <li><a href="schedule.html">Synposium Schedule</a></li>
+                                        <li><a href="about.html">Synposium Register</a></li>
                                     </ul>
                                 </li>
                                 <li class="submenu">
-                                    <a href="introduction.html">QPQC论坛</a>
+                                    <a href="introduction.html">QPQC Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="#">论坛介绍</a></li>
-                                        <li><a href="#">论坛日程</a></li>
-                                        <li><a href="#">论坛注册</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="submenu">
-                                    <a href="CSACpage.html">CSAC会议</a>
-                                    <ul class="sub">
-                                        <li><a href="CSACpage.html">会议介绍</a></li>
-                                        <li><a href="CSACplan.html">会议日程</a></li>
-                                        <li><a href="CSACregister.html">会议注册</a></li>
+                                        <li><a href="#">Synposium Introduction</a></li>
+                                        <li><a href="#">Synposium Schedule</a></li>
+                                        <li><a href="#">Synposium Register</a></li>
                                     </ul>
                                 </li>
 
                                 <li class="submenu">
-                                    <a href="introduction.html">CC国际会议</a>
+                                    <a href="CSACpage.html">CSAC Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="#">论坛介绍</a></li>
-                                        <li><a href="#">论坛日程</a></li>
-                                        <li><a href="#">论坛注册</a></li>
+                                        <li><a href="CSACpage.html">Synposium Introduction</a></li>
+                                        <li><a href="CSACplan.html">Synposium Schedule</a></li>
+                                        <li><a href="CSACregister.html">Synposium Register</a></li>
+                                    </ul>
+                                </li>
+
+                                <li class="submenu">
+                                    <a href="introduction.html">CC Synposium</a>
+                                    <ul class="sub">
+                                        <li><a href="#">Synposium Introduction</a></li>
+                                        <li><a href="#">Synposium Schedule</a></li>
+                                        <li><a href="#">Synposium Schedule</a></li>
                                     </ul>
                                 </li>
                             </ul>
