--- a/index.html
+++ b/index.html
@@ -41,44 +41,44 @@
                                 <li class="submenu">
                                     <a href="SHDIpage.html">SHDI Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="SHDIpage.html">Synposium Introduction</a></li>
-                                        <li><a href="SHDIplan.html">Synposium Schedule</a></li>
-                                        <li><a href="SHDIregister.html">Synposium Register</a></li>
+                                        <li><a href="SHDIpage.html">Introduction</a></li>
+                                        <li><a href="SHDIplan.html">Schedule</a></li>
+                                        <li><a href="SHDIregister.html">Register</a></li>
                                     </ul>
                                 </li>
 
                                 <li class="submenu">
                                     <a href="introduction.html">SMPC Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="introduction.html">Synposium Introduction</a></li>
-                                        <li><a href="schedule.html">Synposium Schedule</a></li>
-                                        <li><a href="about.html">Synposium Register</a></li>
+                                        <li><a href="introduction.html">Introduction</a></li>
+                                        <li><a href="schedule.html">Schedule</a></li>
+                                        <li><a href="about.html">Register</a></li>
                                     </ul>
                                 </li>
                                 <li class="submenu">
                                     <a href="introduction.html">QPQC Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="#">Synposium Introduction</a></li>
-                                        <li><a href="#">Synposium Schedule</a></li>
-                                        <li><a href="#">Synposium Register</a></li>
+                                        <li><a href="#">Introduction</a></li>
+                                        <li><a href="#">Schedule</a></li>
+                                        <li><a href="#">Register</a></li>
                                     </ul>
                                 </li>
 
                                 <li class="submenu">
                                     <a href="CSACpage.html">CSAC Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="CSACpage.html">Synposium Introduction</a></li>
-                                        <li><a href="CSACplan.html">Synposium Schedule</a></li>
-                                        <li><a href="CSACregister.html">Synposium Register</a></li>
+                                        <li><a href="CSACpage.html">Introduction</a></li>
+                                        <li><a href="CSACplan.html">Schedule</a></li>
+                                        <li><a href="CSACregister.html">Register</a></li>
                                     </ul>
                                 </li>
 
                                 <li class="submenu">
                                     <a href="introduction.html">CC Synposium</a>
                                     <ul class="sub">
-                                        <li><a href="#">Synposium Introduction</a></li>
-                                        <li><a href="#">Synposium Schedule</a></li>
-                                        <li><a href="#">Synposium Schedule</a></li>
+                                        <li><a href="#">Introduction</a></li>
+                                        <li><a href="#">Schedule</a></li>
+                                        <li><a href="#">Schedule</a></li>
                                     </ul>
                                 </li>
                             </ul>
