--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                                              <ul class="sub">
                                                  <li><a href="#">Introduction</a></li>
                                                  <li><a href="#">Schedule</a></li>
-                                                 <li><a href="#">Register册</a></li>
+                                                 <li><a href="#">Register</a></li>
                                              </ul>
                                     </li>
                                 
