--- a/schedule.html
+++ b/schedule.html
@@ -73,7 +73,7 @@
                                 
                                     <li class="submenu">
                                            <a href="introduction.html">CC Synposium</a>
-                                             <ul class="sub">
+                                          <!--   <ul class="sub">  -->
                                                  <li><a href="#">Introduction</a></li>
                                                  <li><a href="#">Schedule</a></li>
                                                  <li><a href="#">Register</a></li>
