--- a/schedule.html
+++ b/schedule.html
@@ -65,9 +65,9 @@
                                 
                                      <li class="submenu">
                                            <a href="CSACpage.html">CSAC</a>
-                                            <li><a href="CSACpage.html">Introduction</a></li>
-                                                 <li><a href="CSACplan.html">Schedule</a></li>
-                                                 <li><a href="CSACregister.html">Register</a></li>
+                                            <li><a href="#">Introduction</a></li>
+                                                 <li><a href="#">Schedule</a></li>
+                                                 <li><a href="#">Register</a></li>
                                              </ul>
                                      </li>
                         
