--- a/schedule.html
+++ b/schedule.html
@@ -63,13 +63,14 @@
                                              </ul>
                                      </li>
                                 
-                                     <li class="submenu">
-                                           <a href="CSACpage.html">CSAC</a>
-                                            <li><a href="#">Introduction</a></li>
-                                                 <li><a href="#">Schedule</a></li>
-                                                 <li><a href="#">Register</a></li>
+                                      <li class="submenu">
+                                           <a href="CSACpage.html">CSAC Synposium</a>
+                                             <ul class="sub">
+                                                <li><a href="CSACpage.html"></a></li>
+                                                 <li><a href="CSACplan.html"></a></li>
+                                                 <li><a href="CSACregister.html"></a></li>
                                              </ul>
-                                     </li>
+                                    </li>
                         
                                      <li class="submenu">
                                            <a href="introduction.html">CC</a>
