--- a/schedule.html
+++ b/schedule.html
@@ -38,7 +38,7 @@
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i>DFSC</a></li>
                                     <li class="submenu">
-                                           <a href="SHDIpage.html">SHDI</a>
+                                           <a href="SHDIpage.html">SHDI Synposium</a>
                                              <ul class="sub">
                                                  <li><a href="SHDIpage.html">Introduction</a></li>
                                                  <li><a href="SHDIplan.html">Schedule</a></li>
@@ -47,7 +47,7 @@
                                     </li>
                                 
                                     <li class="submenu">
-                                           <a href="introduction.html">SMPC</a>
+                                           <a href="introduction.html">SMPC Synposium</a>
                                              <ul class="sub">
                                                  <li><a href="introduction.html">Introduction</a></li>
                                                  <li><a href="schedule.html">Schedule</a></li>
@@ -55,7 +55,7 @@
                                              </ul>
                                     </li>
                                     <li class="submenu">
-                                           <a href="introduction.html">QPQC</a>
+                                           <a href="introduction.html">QPQC Synposium</a>
                                              <ul class="sub">
                                                  <li><a href="#">Introduction</a></li>
                                                  <li><a href="#">Schedule</a></li>
@@ -73,7 +73,7 @@
                                     </li>
                         
                                      <li class="submenu">
-                                           <a href="introduction.html">CC</a>
+                                           <a href="introduction.html">CC Synposium</a>
                                              <ul class="sub">
                                                  <li><a href="#">Introduction</a></li>
                                                  <li><a href="#">Schedule</a></li>
