--- a/introduction.html
+++ b/introduction.html
@@ -39,9 +39,9 @@
                                     <li class="submenu">
                                            <a href="SHDIpage.html">SHDI Synposium</a>
                                              <ul class="sub">
-                                                 <li><a href="SHDIpage.html">Synposium Introduction</a></li>
-                                                 <li><a href="SHDIplan.html">Synposium Schedule</a></li>
-                                                 <li><a href="SHDIregister.html">Synposium Register</a></li>
+                                                 <li><a href="SHDIpage.html">Introduction</a></li>
+                                                 <li><a href="SHDIplan.html">Schedule</a></li>
+                                                 <li><a href="SHDIregister.html">Register</a></li>
                                              </ul>
                                     </li>
                                 
