--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     <ul class="sub">
                                         <li><a href="#">Introduction</a></li>
                                         <li><a href="#">Schedule</a></li>
-                                        <li><a href="#">Schedule</a></li>
+                                        <li><a href="#">Register</a></li>
                                     </ul>
                                 </li>
                             </ul>
