--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-                                    <a href="SHDIpage.html">SHDI Synposium</a>
+                                    <a href="SHDIpage.html">SHDI Symp</a>
                                     <ul class="sub">
                                         <li><a href="SHDIpage.html">Introduction</a></li>
                                         <li><a href="SHDIplan.html">Schedule</a></li>
@@ -48,7 +48,7 @@
                                 </li>
 
                                 <li class="submenu">
-                                    <a href="introduction.html">SMPC Synposium</a>
+                                    <a href="introduction.html">SMPC Symp</a>
                                     <ul class="sub">
                                         <li><a href="introduction.html">Introduction</a></li>
                                         <li><a href="schedule.html">Schedule</a></li>
@@ -56,7 +56,7 @@
                                     </ul>
                                 </li>
                                 <li class="submenu">
-                                    <a href="introduction.html">QPQC Synposium</a>
+                                    <a href="introduction.html">QPQC Symp</a>
                                     <ul class="sub">
                                         <li><a href="#">Introduction</a></li>
                                         <li><a href="#">Schedule</a></li>
@@ -65,7 +65,7 @@
                                 </li>
 
                                 <li class="submenu">
-                                    <a href="CSACpage.html">CSAC Synposium</a>
+                                    <a href="CSACpage.html">CSAC Symp</a>
                                     <ul class="sub">
                                         <li><a href="CSACpage.html">Introduction</a></li>
                                         <li><a href="CSACplan.html">Schedule</a></li>
@@ -74,7 +74,7 @@
                                 </li>
 
                                 <li class="submenu">
-                                    <a href="introduction.html">CC Synposium</a>
+                                    <a href="introduction.html">CC Symp</a>
                                     <ul class="sub">
                                         <li><a href="#">Introduction</a></li>
                                         <li><a href="#">Schedule</a></li>
