--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                 <!-- <p style="width: 80%;float: right">UK: +44(0)7422 581269<br/></p> -->
                                 <!-- <p style="width: 80%;float: right">CH: +86-18180453935<br/></p> -->
                                 <p style="width: 80%;float: right">E-mail:<br/></p>
-                                <p style="width: 80%;float: right">linzjiang#hotmail.com<br/></p>
-                                <p style="width: 80%;float: right">linzhi.jiang#surrey.ac.uk<br/></p>
+                                <p style="width: 80%;float: right">linzjiang#hotmail dot com<br/></p>
+                                <p style="width: 80%;float: right">linzhi dot jiang#surrey dot ac dot uk<br/></p>
                                 <p style="width: 80%;float: right">WWW:<br/></p>
                                 <p style="width: 80%;float: right">https://ruizhian.github.io/TeamWeb/<br/></p>
                             </td>
@@ -223,7 +223,7 @@
                                             <p style="padding-top: 5px;padding-bottom: 5px;">[4]&nbsp&nbsp&nbsp</p></td>
                                         <td style="width: 85%;font-size: 15px;line-height:20px">
                                             <p style="padding-top: 5px;padding-bottom: 5px;">Research Fellow, “Future Proofing the Connected World: A Quantum-Resistant Trusted
-                                                Platform Module”, The European Union’s Horizon 2020 (No.: 779391), ¤486,889,000,
+                                                Platform Module”, The European Union’s Horizon 2020 (No.: 779391), <!-- ¤486,889,000,-->
                                                 Jun. 2018 to Dec. 2020</p></td>
                                     </tr>
                                     <tr cellpadding="10">
