--- a/index.html
+++ b/index.html
@@ -654,12 +654,11 @@
                                     • Journal of Software and Journal of Cryptologic Research (Chinese)<br/></p>
                                 <p style="width: 96%;float: right"><b>Conference Service</b><br/></p>
                                 <p style="font-size:15px;width: 90%;float: right">• Organizer: International Symposium of Coding and Cryptography, 2018–2019<br/>
-                                    • Organizer/Chair: International Symposium of Software and Hardware Design and Implementation,
+                                    • Initiator/Chair: International Symposium of Software and Hardware Design and Implementation--SHDI Symp,
                                     2018–2019<br/>
-                                    • Organizer/Chair: International Symposium of Secure Multiparty Computation, 2017–2019<br/>
-                                    • Organizer: International Symposium of Post-Quantum Cryptography and Homomorphic
-                                    Encryption, 2016–2019<br/>
-                                    • Organizer: International Cyber Security and Applied Cryptography Conference, 2018–2019<br/></p>
+                                    • Initiator/Chair: International Symposium of Secure Multiparty Computation--SMPC Symp, 2017–2019<br/>
+                                    • Initiator: International Symposium of Quantum Computing and Post-Quantum Cryptography --QPQC Symp, 2016–2019<br/>
+                                    • Initiator: International Cyber Security and Applied Cryptography Conference--CC Symp, 2018–2019<br/></p>
                             </td>
                         </tr>
                         <tr>
