--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                                     2018–2019<br/>
                                     • Initiator/Chair: International Symposium of Secure Multiparty Computation--SMPC Symp, 2017–2019<br/>
                                     • Initiator: International Symposium of Quantum Computing and Post-Quantum Cryptography --QPQC Symp, 2016–2019<br/>
-                                    • Initiator: International Cyber Security and Applied Cryptography Conference--CC Symp, 2018–2019<br/></p>
+                                    • Initiator: International Cyber Security and Applied Cryptography Conference--CSAC Symp, 2018–2019<br/></p>
                             </td>
                         </tr>
                         <tr>
