--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ visits = 1
 else
 visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
-document.write("您是第" + visits + "位访问本专题的！")
+document.write("Welcome" + visits + "！")
 // -->
 </script>
     
@@ -206,7 +206,7 @@ document.write("您是第" + visits + "位访问本专题的！")
                                 <div id="introdution2">
                                     <p ><b>University of Electronic Science and Technology of China
                                         (UESTC)</b>, Chengdu, Sichuan, China<br/></p>
-                                    <p style="width: 96%;float: right">Ph.D., School of Computer Science and Engineering,Sept.<br/>2014–Jun. 2018<br/></p>
+                                    <p style="width: 96%;float: right">Ph.D., School of Computer Science and Engineering,Sept. 2014–Jun. 2018<br/></p>
                                     <p style="font-size:15px;width: 90%;float: right">• Thesis Topic: Post-Quantum Cryptography and Application<br/>
                                         • Candidacy: Research on (Fully) Homomorphic Encryption and Its Application In Cloud Computing<br/>
                                         • Adviser: Professor Chunxiang Xu<br/>
