--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" >
+<meta name="google-translate-customization" content="108d9124921d80c3-80e20d618ff053c8-g4f02ec6f3dba68b7-c"></meta>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale= 1.0 maximum-scale=1.0 user-scalable=0">
@@ -71,7 +72,7 @@ setCookie("counter", visits, now)
 document.write("Welcome" + visits + "！")
 // -->
 </script>
-    
+<div id="google_translate_element"></div>    
 <body>
     <div >
         <div id="head">
@@ -819,6 +820,10 @@ document.write("Welcome" + visits + "！")
                 </div>
             </div>
         </div>
-
+<script type="text/javascript">
+function googleTranslateElementInit() {
+new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
 </body>
 </html>
