--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@ document.write("Welcome" + visits + "！")
                                 <p style="font-size:15px;width: 90%;float: right">• Fully Homomorphic Encryption Implementation with FPGA and ARM in VHDL<br/>
                                     • Lattice-based Cryptographic Schemes Implementation with FPGA and ARM in VHDL<br/></p>
                                 <p style="width: 96%;float: right">Computer Programming:<br/></p>
-                                <p style="font-size:15px;width: 90%;float: right">• C, C++, SQL, MySQL, and OthersL<br/></p>
+                                <p style="font-size:15px;width: 90%;float: right">• C, C++, SQL, MySQL, and Others<br/></p>
                                 <p style="width: 96%;float: right">Numerical Analysis:<br/></p>
                                 <p style="font-size:15px;width: 90%;float: right">• MATLAB, R, Maple, Mathematica<br/></p>
                                 <p style="width: 96%;float: right">Operating Systems:<br/></p>
