--- a/index.html
+++ b/index.html
@@ -183,11 +183,10 @@ document.write("Welcome" + visits + "！")
                                 <p style="text-indent:0em;text-align: center  ;padding-top: 5px"><b>CURRENT <br/>ACADEMIC <br/>APPOINTMENTS</b><br/></p>
                             </td>
                             <td id="table1">
-                                <p style="float: left"><b>Associate Professor</b>, Guilin University of Electronic Technology<br/></p>
-                                <p style="text-indent:2em;width: 91%;float: right;text-align: right">Dec. 2017 to present</p>
-                                <p style="float: left"><b>Research Fellow</b>, University of Surrey, Project Manager and Supervisor: Prof. Liqun Chen
+                                <p style="float: left"><b>Associate Professor</b>, Guilin University of Electronic Technology, Dec. 2017 to present<br/></p>
+                                <p style="float: left"><b>Research Fellow</b>, University of Surrey, Project Manager and Supervisor: Prof. Liqun Chen, Sep. 2018 to present
                                     <br/></p>
-                                <p style="text-indent:2em;width: 91%;float: right;text-align: right">Sep. 2018 to present</p>
+                                
                             </td>
                         </tr>
                         <tr>
