--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ document.write("Welcome" + visits + "！")
                             </td>
                             <td id="table1">
                                 <p style="float: left"><b>Associate Professor</b>, Guilin University of Electronic Technology, Dec. 2017 to present<br/></p>
-                                <p style="float: left"><b>Research Fellow</b>, University of Surrey, Project Manager and Supervisor: Prof. Liqun Chen, Sep. 2018 to present
+                                <p style="float: left"><b>Research Fellow</b>, University of Surrey, Project Manager and Supervisor: Prof. Liqun Chen. Sep. 2018 to present
                                     <br/></p>
                                 
                             </td>
@@ -194,8 +194,8 @@ document.write("Welcome" + visits + "！")
                                 <p style="text-indent:0em;text-align: center  ;padding-top: 5px"><b>PREVIOUS <br/>ACADEMIC <br/>APPOINTMENTS</b><br/></p>
                             </td>
                             <td id="table1">
-                                <p style="float: left"><b>Lecturer</b>, West Anhui University<br/><br/></p>
-                                <p  style="text-indent:2em;width: 91%;float: right;text-align: right">Dec. 2008 to Sep. 2014<br/></p>
+                                <p style="float: left"><b>Lecturer</b>, West Anhui University, Dec. 2008 to Sep. 2014<br/><br/></p>
+                                
                             </td>
                         </tr>
                         <tr>
