--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -64,7 +64,7 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                <p style="text-indent:2em ">随着网络空间安全、人工智能和云计算等领域的快速发展，学术界和工业界构造了大量的理论和应用方案；同时，工业界和用户对相关落地实现系统的需求也在不断快速增长；因此，必须解决相关方案和算法的软件和硬件实现问题；而软件设计理论的逐渐成熟和硬件设计与实现技术的快速发展和产品化，为解决上述问题提供了良好的基础和契机。<br/>
+                <p style="text-indent:2em ">With the rapid development of cyberspace security, artificial intelligence and cloud computing, academia and industry have constructed a large number of theories and applications.At the same time, the industry and users on the relevant landing system demand is also growing rapidly;Therefore, it is necessary to solve the software and hardware implementation of related schemes and algorithms;The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation technology provide a good foundation and opportunity for solving the above problems.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2019.html">SHDI Symposiu-2019</a>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
