--- a/index.html
+++ b/index.html
@@ -93,12 +93,7 @@ document.write("Welcome" + visits + "！")
                                 <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-                                    <a href="SHDIpage.html">SHDI Symp</a>
-                                    <ul class="sub">
-                                        <li><a href="SHDIpage.html">Introduction</a></li>
-                                        <li><a href="SHDIplan.html">Schedule</a></li>
-                                        <li><a href="SHDIregister.html">Register</a></li>
-                                    </ul>
+                                    <a href="SHDI Introduction.html">SHDI Symp</a>
                                 </li>
 
                                 <li class="submenu">
