--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -64,7 +64,7 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                <p style="text-indent:2em ">With the rapid development of cyberspace security, artificial intelligence and cloud computing, academia and industry have constructed a large number of theories and applications.At the same time, the industry and users on the relevant landing system demand is also growing rapidly;Therefore, it is necessary to solve the software and hardware implementation of related schemes and algorithms;The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation technology provide a good foundation and opportunity for solving the above problems.<br/>
+                <p style="text-indent:2em ">With the rapid development of cyberspace security, artificial intelligence and cloud computing, researchers in academia and industry have constructed a large number of scheme. In the meanwhile, the needs of industry and users are also growing urgently. Therefore, it is necessary to solve the software and hardware implementations of designed schemes and algorithms. The gradual maturity of software design theory and the rapid development and productization of hardware design and implementatio provide a good foundation and opportunity for solving the above problems.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2019.html">SHDI Symposiu-2019</a>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
